--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AuthEmailFirebase_Basic</string>
+    <string name="title_activity_chat">ChatActivity</string>
 </resources>
